Style tweak to flowplayer waiting screen to fix alignment

--- a/pillar-web/src/styles/_project.sass
+++ b/pillar-web/src/styles/_project.sass
@@ -550,7 +550,7 @@ section.node-preview
 			z-index: 0
 
 		.overlay
-			@include overlay(transparent, 80%, rgba(black, .5), 100%)
+			@include overlay(transparent, 0%, rgba(black, .3), 100%)
 			width: 100%
 			height: 100%
 			z-index: 2
