--- a/pillar-web/src/styles/plugins/_flowplayer.sass
+++ b/pillar-web/src/styles/plugins/_flowplayer.sass
@@ -155,13 +155,15 @@ $flowplayer-skin-background: $color-background-nav
 	bottom: 0
 	left: 0
 	right: 0
-	margin: 0
+	margin: 0 !important
 	background-color: rgba($flowplayer-skin-background, .5)
 
 	i
-		font-size: 2em
-		opacity: .2
+		font-size: 3em
+		opacity: .3
 		+position-center-translate
+		top: 43%
+		left: 46%
 
 .flowplayer .fp-loading
 	opacity: 0
